[FIX] cmis document: dropdown menu visibility

--- a/cmis_web/static/src/scss/form_widgets.scss
+++ b/cmis_web/static/src/scss/form_widgets.scss
@@ -178,7 +178,7 @@ form.cmis_duplicate_document_resolver{
 .form-control:invalid {
     background-image: linear-gradient(blank, red), linear-gradient(red, red);
 }
-td.o_field_cmis_document_cell{
+td.o_cmis_document_cell{
     overflow: visible !important;
 }
 
